<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="350sp"
    android:layout_height="350sp"
    android:background="#085394"
    android:padding="5sp"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/exit"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_gravity="end"
        android:gravity="center"
        android:shadowColor="#000"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:text="@string/x"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:fontFamily="@font/prompt_bold"
            android:paddingStart="37sp"
            android:paddingEnd="49sp"
            android:shadowColor="#000"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="5"
            android:text="@string/description"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:fontFamily="@font/prompt"
            android:inputType="textPersonName"
            android:text=""
            android:textColor="@android:color/white"
            android:importantForAutofill="no" tools:targetApi="o"/>

        <TextView
            android:id="@+id/amountTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:fontFamily="@font/prompt_bold"
            android:paddingStart="37sp"
            android:paddingEnd="49sp"
            android:shadowColor="#000"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="5"
            android:text="@string/amount"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="" />

        <EditText
            android:id="@+id/amountEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:fontFamily="@font/prompt"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:text=""
            android:textColor="@android:color/white"
            tools:targetApi="o" />

        <Button
            android:id="@+id/submitBtnPop"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="109dp"
            android:layout_height="31dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="50sp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_rounded"
            android:fontFamily="@font/prompt_bold"
            android:shadowColor="#000"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="5"
            android:text="@string/submit"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@android:color/white"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

</LinearLayout>